--- a/index.html
+++ b/index.html
@@ -146,27 +146,14 @@
 
     <!--Section 2-->
     <div class="rounded-mobile lg:rounded-desktop bg-co-dark mb-10 pb-5 lg:py-58p lg:mb-150p">
-        <div class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap-100p items-center pt-47p lg:pt-0">
-
-            <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start lg:w-2/3 lg:gap-5">
-                <p class="text-co-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
-                    Consectetur nibh velit magna consectetur leo. </p>
-                <h1 class="text-co-mo-h1 lg:text-co-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam Tristique. </h1>
-                <button class="flex items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
-                    Lorem Ipsum
-                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
-                              fill="#262626"/>
-                    </svg>
-                </button>
-            </div>
+        <div class="mx-auto max-w-9 flex flex-col-reverse lg:grid lg:grid-cols-2 gap-10 lg:gap-11 items-center pt-47p lg:pt-0">
 
             <!-- four boxes -->
             <div class="mx-auto max-w-95 lg:max-w-full">
 
-                <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2 lg:grid-cols-2">
+                <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2">
 
-                    <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p">
+                    <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
@@ -179,7 +166,7 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                    <div class="bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-2.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
@@ -192,7 +179,7 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-white lg:bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p">
+                    <div class="bg-co-white lg:bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-3.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
@@ -205,7 +192,7 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow lg:bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                    <div class="bg-co-yellow lg:bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9 lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-4.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
@@ -221,8 +208,31 @@
                 </div>
 
             </div>
+
+            <!-- info button box -->
+            <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start">
+                <p class="text-co-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
+                    Consectetur nibh velit magna consectetur leo. </p>
+                <h1 class="text-co-mo-h1 lg:text-co-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam Tristique. </h1>
+                <button class="flex items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+                    Lorem Ipsum
+                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                              fill="#262626"/>
+                    </svg>
+                </button>
+            </div>
+
         </div>
+
+
+
+
     </div>
+
+
+
+
 </div>
 
 </body>
